tests/snapshots/parse_error_eof.expected
-- PARSE ERROR ---------------------------------------------

test.gn:1:8

I was expecting expression but found Eof instead.

1 | let x =
           ^
